<resources>
    <string name="app_name">PlaNet</string>
    <string name="facebook_app_id">397161661812167</string>
    <string name="fb_login_protocol_scheme">fb397161661812167</string>


    <!-- Sign In -->
    <string name="email">이메일 아이디</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">비밀번호</string>
    <string name="apply">Apply</string>
    <string name="find_id">Find my ID</string>
    <string name="find_id_password">Find my ID And Passwrod</string>
    <string name="find_password">Find my password</string>
    <string name="close">Close</string>

    <string name="signin_email">로그인/회원가입</string>
    <string name="signin_google">Google 로그인</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="donothave_permission">You do not have read permission</string>
    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>
    <string name="user_nickname">닉네임</string>
    <string name="user_bio">소개글</string>

    <!-- Alarm -->
    <string name="alarm_favorite">님이 별똥별을 남겼습니다.</string>
    <string name="alarm_comment">님이 댓글을 남겼습니다.</string>
    <string name="alarm_follow">님이 팔로우를 시작했습니다.</string>

    <!-- Comment -->
    <string name="send">작성</string>

    <!-- Add Photo -->
    <string name="upload_image">게시물 업로드</string>
    <string name="hint_image_content">사진에 대한 설명을 입력하세요!</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!--confirm dialog-->
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="confirm_delete_message">알람을 삭제하시겠습니까?</string>

    <!--Set Info-->
    <string name="nickname">닉네임</string>
    <string name="bio">간단 소개글</string>
    <string name="set_profile">프로필 설정 완료</string>
    <string name="new_pw">새로운 비밀번호 (6자리 이상)</string>
    <string name="new_pw_check">새로운 비밀번호 확인</string>
    <string name="set_password">비밀번호 설정 완료</string>

    <!--remove account-->
    <string name="current_pw">현재 비밀번호 입력</string>
    <string name="remove_check">회원 탈퇴</string>

    <!--shooting star dialog-->
    <string name="shooting_star_title">수집한 별똥별</string>
    <string name="level">LEVEL</string>

</resources>